fixed set interval to run properly; re-organized css file; started working on visibility of html elements upon clicking start quiz

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* styling 2+ files */
-
 body {
     /* need to change this font to one that matches example a little closer */
     font-family: 'IBM Plex Sans', sans-serif;
@@ -9,9 +7,9 @@ body {
 
 }
 
-#time-display {
-float: right;
-margin: 0;
+.time-display {
+    float: right;
+    margin: 0;
 }
 
 .button,
@@ -41,7 +39,13 @@ margin: 0;
 
 
 
-/* styling index.html */
+
+
+/* styling for begin-here sections  */
+.begin-page{
+    display: initial;
+}
+
 .instrucions {
     width: 65%;
     margin-left: 20%;
@@ -50,27 +54,14 @@ margin: 0;
 
 
 
-/* styling for highscores.html */
-.highscore-container {
-    padding-left: 30%;
-    padding-top: 5%;
+
+
+
+/* styling for questions-begin section */
+.questions-begin-page {
+    display: none;
 }
 
-.stored-user-initials {
-    background-color:thistle;
-    width: 40%;
-    margin-left: 400px;
-}
-
-#go-back,
-#clear {
-    margin: 15px;
-}
-
-
-
-
-/* styling questions.html */
 .question {
     margin-bottom: 10px;
     font-size: 32px;
@@ -86,3 +77,35 @@ margin: 0;
 }
 
 
+
+
+
+/* styling for user-entry-page section */
+.user-entry-page { 
+    visibility: hidden;
+}
+
+
+
+
+
+/* styling for view-highscores-page section */
+.view-highscores-page {
+    visibility: hidden;
+}
+
+.highscore-container {
+    padding-left: 30%;
+    padding-top: 5%;
+}
+
+.stored-user-initials {
+    background-color:thistle;
+    width: 40%;
+    margin-left: 400px;
+}
+
+#go-back,
+#clear {
+    margin: 15px;
+}
